# NHSB

./: LICENSE  README.md  pyproject.toml
examples/: fisher_forecast.py  generate_paper_figures.py  mcmc_recovery.py  quickstart.py
nhsb_waveform/: __init__.py  baselines.py  constitutive.py  fisher.py  mcmc.py  params.py  priors.py  psd.py  tapers.py  waveform.py
tests/: test_basic.py
